# discord-dynamic-status-hyprland

./: .gitignore  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: build-cosmic.yml  build.yml
common/: Cargo.toml
common/src/: constants.rs  lib.rs  logger.rs  rules.rs
common/src/config/: default-config-cosmic.json  settings.rs
common/src/discord/: rpc.rs
cosmic/: Cargo.toml
cosmic-protocol/: Cargo.toml
cosmic-protocol/src/: lib.rs
cosmic/autostart/: ddsc.desktop
cosmic/protocols/: cosmic-toplevel-info-unstable-v1.xml
cosmic/src/: main.rs  toplevel.rs
hyprland/: Cargo.toml
hyprland/src/: main.rs
scripts/: discord-monitor-cosmic.service  discord-monitor-hyprland.service  discord-monitor.service  discord-monitor.sh  install.sh
src/: constants.rs  logger.rs  main.rs  rules.rs
src/config/: config.rs  default-config.json  mod.rs
src/discord/: rpc.rs
src/hyprland/: events.rs
