[package]
name = "discord-dynamic-status-hyprland"
authors = ["kazuha046", "Dae Euhwa"]
description = "Dynamic Discord Rich Presence based on active Hyprland windows"
repository = "https://github.com/Veridian-Zenith/discord-dynamic-status-hyprland"
homepage = "https://github.com/Veridian-Zenith/discord-dynamic-status-hyprland"
license-file = "LICENSE"
keywords = ["discord", "rpc", "hyprland", "wayland", "dynamic"]
categories = ["command-line-utilities", "games", "network-programming"]
version = "1.1.1"
edition = "2024"

[package.metadata.release]
pre-release-hook = ["cargo", "check"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
discord-rich-presence = "1.1"
chrono = "0.4"
directories = "6.0"
