[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Shared library for discord-dynamic-status"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
discord-rich-presence = "1.1"
chrono = "0.4"
directories = "6.0"
