[package]
name = "ddsh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Dynamic Discord Rich Presence based on active Hyprland windows"

[[bin]]
name = "ddsh"
path = "src/main.rs"

[package.metadata.release]
pre-release-hook = ["cargo", "check"]

[dependencies]
common = { path = "../common" }
